# battleships

./: .gitignore  Cargo.toml  README.md  requests.http  run.sh
src/: app_state.rs  dto.rs  game_engine.rs  main.rs
static/: index.html  main.html
