[package]
name = "battleship"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.9.0"
uuid = { version = "1.15.1", features = ["v4"] }
axum = { version = "0.8.1", features = ["ws"] }
axum-extra = { version = "0.10.0", features = ["typed-header"] }
tokio = { version = "1.43.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["fs","trace"] }
futures = "0.3.31"
#actix-web = "4"
#actix-files = "0.6.6"
#http = "0.2.12"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
log = "0.4.26"

tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
#env_logger = "0.11.6"
#rocket = "0.5.1"

